# latent-ability-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  RUNTIME_DEPLOY.md  _config.yml  pyproject.toml  render.yaml  requirements.txt
_site/: index.html  search.json
backend/: README.md  __init__.py  app.py  example_request.json  executor.py  run_cluster.sh  run_huggingface.sh  run_local.sh  smoke_test.py
data/: 98_script_pratica_portuguese.md
notebooks/: 00_workshop_roadmap.ipynb  01_00_supervised_evaluation_toy_problems.ipynb  01_00_unsupervised_evaluation_toy_problems.ipynb  01_01_activities.ipynb  01_02_answer.ipynb  01_supervised_evaluation_toy_problems.ipynb  02_00_binary_irt_and_2pl.ipynb  02_01_activities.ipynb  02_02_answer.ipynb  02_irt_beta4_icc.ipynb  03_00_beta4_and_claire.ipynb  03_00_beta4_irt.ipynb  03_01_activities.ipynb  03_01_extra_negative_disc.ipynb  03_02_activities.ipynb  03_02_answer.ipynb  03_03_answer.ipynb  03_claire_latent_ability.ipynb  04_00_unsupervised_evaluation_toy_problems.ipynb  04_01_activities.ipynb  04_02_answer.ipynb  05_00_claire.ipynb  05_01_extra_negative_disc.ipynb  05_02_activities.ipynb  05_03_answer.ipynb  workshop_utils.py
site/: .jekyll-metadata  _config.cluster.example.yml  _config.local.yml  _config.prod.yml  _config.yml  authors.md  contact.md  index.md  readme.md  references.md  roadmap.md  search.json  section-1-activity.md  section-1-answer.md  section-1.md  section-2-activity.md  section-2-answer.md  section-2.md  section-3-activity.md  section-3-answer.md  section-3-extra.md  section-3.md  section-4-answer.md  (+6 more)
(+58 files in other folders)
