[tool.poetry]
name = "latent-ability-ml"
version = "0.1.0"
description = "Workshop material for supervised evaluation, IRT, Beta4, and CLAIRE."
authors = ["Manuel Ferreira-Junior <ferreira.jr.ufpb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
birt-gd = "^0.1.49"

[tool.poetry.dev-dependencies]
ruff = "^0.15.11"

[tool.ruff]
target-version = "py310"
include = ["*.py", "*.pyi"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
